# gsoap_example

./: CMakeLists.txt  RemoteDiscoveryBinding.nsmap  discovery_client.c  discovery_server.c  onvif.h  soapC.c  soapC.cpp  soapClient.c  soapH.h  soapServer.c  soapStub.h
example/: CMakeLists.txt  calc.h  client.cpp  readme  server.cpp  soapStub.h  soapcalcProxy.cpp  soapcalcService.cpp
onvif/: readme
